2005-02-04 Axel Simon <A.Simon@kent.ac.uk>

	* gtk/Graphics/UI/Gtk/Display/Image.chs: Added imageSetFromPixbuf.
	
2005-02-03 Duncan Coutts <duncan@coutts.uklinux.net>

	* demo/calc/CalcModel.hs: fix a bug in formatting numbers for display.
	I was stripping off trailing 0's too enthusiasticly.

2005-01-31 Duncan Coutts <duncan@coutts.uklinux.net>

	* demo/glade/simple.glade: remove libgnome requirement, it was
	unnecesary.

2005-01-30 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/ApiGen.hs: first go at generating signals including
	documentation. Ignore virstual methods as they are internal.

	* tools/apiGen/format-docs.xsl: extract signal documentation, and
	adjust for new formatting of property documentation.

	* gtk/abstract, gtk/buttons, gtk/display, gtk/embedding, gtk/entry,
	gtk/gdk, gtk/general, gtk/glib, gtk/layout, gtk/menuComboToolbar,
	gtk/misc, gtk/multiline, gtk/ornaments, gtk/pango, gtk/scrolling,
	gtk/selectors, gtk/signals, gtk/treeList, gtk/typehier, gtk/windows:
	remove directories where the non-hierarchical modules used to live.

2005-01-28 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/Makefile: use sed to do the patching rather than an
	external patch file (which I'd never added to cvs anyway). This time
	it should work for other people "out of the box".

2005-01-27 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/gapi2xml.pl, tools/apiGen/gapi_parser.pl,
	tools/apiGen/gapi_pp.pl: sync up with the latest version of these tools
	from the mono/gtk# project.

	* tools/apiGen/ApiGen.hs: minor updates necessary to work with the
	updated gapi tools.

	* tools/apiGen/atk-sources.xml, tools/apiGen/gdk-sources.xml
	tools/apiGen/glade-sources.xml,	tools/apiGen/gnomecanvas-sources.xml
	tools/apiGen/gtk-sources.xml, tools/apiGen/pango-sources.xml,
	tools/apiGen/Makefile : use later versions of Gtk+ and related libs,
	now at 2.4.14 rather than 2.2.2.

	* demo/calc/Calc.hs, demo/calc/CalcModel.hs, demo/calc/Makefile